@@ -23,3 +23,4 @@ admin.site.register(models.Rating, RatingAdmin)
 admin.site.register(models.RatingCategory, TranslatableAdmin)
 admin.site.register(models.Review, ReviewAdmin)
 admin.site.register(models.ReviewExtraInfo, ReviewExtraInfoAdmin)
+admin.site.register(models.RatingCategoryChoice, TranslatableAdmin)
