@@ -49,6 +49,7 @@ EXTERNAL_APPS = [
     'django_nose',
     'hvad',
     'user_media',
+    'generic_positions',
 ]
 
 INTERNAL_APPS = [
